# booking-website

backend/booking-project/: .env  Cargo.toml
backend/booking-project/src/: main.rs
backend/booking-project/src/db/: mod.rs  mongodb.rs
backend/booking-project/src/handlers/: auth.rs  buses.rs  mod.rs
backend/booking-project/src/middleware/: auth.rs
backend/booking-project/src/models/: auth.rs  booking.rs  bus.rs  mod.rs  user.rs
frontend/bus-project/: package-lock.json  package.json
frontend/bus-project/public/: index.html
frontend/bus-project/src/: App.css  App.jsx  main.jsx
frontend/bus-project/src/components/: ConnectionTest.jsx  Navbar.css  Navbar.jsx
frontend/bus-project/src/contexts/: AuthContext.jsx
frontend/bus-project/src/pages/: Admin.css  Admin.jsx  Booking.css  Booking.jsx  BusSeats.css  BusSeats.jsx  Home.css  Home.jsx  Login.css  Login.jsx  MyBookings.css  MyBookings.jsx  Register.css  Register.jsx  SearchBuses.css  SearchBuses.jsx  dashboard.css  dashboard.jsx
frontend/bus-project/src/services/: api.js
