[package]
name = "booking-project"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
actix-cors = "0.7.0"
mongodb = "2.8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.15"
jsonwebtoken = "9.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
dotenv = "0.15"
env_logger = "0.10"